<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.themarvelmcuquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <ImageView
            android:contentDescription="@string/rights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:src="@drawable/marvel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1"
            android:textColor="@android:color/black" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RadioButton
                android:id="@+id/Jarvis_answer_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/Q1answer"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/Jarvis_answer_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/Q1answer2"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/Jarvis_answer_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/Q1answer3"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/Jarvis_answer_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/Q1answer4"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/hammer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            android:hint="@string/hint" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/armor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            android:hint="@string/hint2" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question4"
            android:textColor="@android:color/black" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/BP_answer_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/Q4answer1"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/BP_answer_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/Q4answer2"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/BP_answer_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/Q4answer3"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/BP_answer_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/Q4answer4"
                android:textSize="16sp" />

        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question5"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/kid1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint3" />

        <EditText
            android:id="@+id/kid2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint4" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question6"
            android:textColor="@android:color/black" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/stone_answer_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/Q6answer1"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/stone_answer_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/Q6answer2"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/stone_answer_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/Q6answer3"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/stone_answer_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/Q6answer4"
                android:textSize="16sp" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question7"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/hawk_eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/Q7answer1"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/fal_con"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/Q7answer2"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/dead_pool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/Q7answer3"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/captain_marvel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/Q7answer4"
            android:textColor="@android:color/black" />

        <ImageView
            android:contentDescription="@string/Q8answer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:src="@drawable/crossbones" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/question8"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/the_punisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/Q8answer1"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/the_ravager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/Q8answer2"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/proff_klaw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/Q8answer3"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/cross_bones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/Q8answer4"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/question9"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/ant_man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/Q9answer1"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/Black_panther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/Q9answer2"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/winter_soldier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/Q9answer3"
            android:textColor="@android:color/black" />

        <CheckBox
            android:id="@+id/captain_america"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/Q9answer4"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/nick_fury"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question10"
            android:textColor="@android:color/black" />

        <EditText
            android:inputType="text"
            android:id="@+id/nameOfDirector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint5" />

        <Button
            android:id="@+id/button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:onClick="submitAnswers"
            android:text="@string/submit"
            android:textColor="#ffffff"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rights" />


    </LinearLayout>

</ScrollView>

